--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -15,6 +15,13 @@
 \section{Résumé}
 \textbf{Resume le mini-projet}
 
+\section{Remerciement}
+Nous souhaitons sincèrement remercier Yann Mahe pour le temps et la patience dont il fait preuve pour nous enseigner sa discipline. Il a su s'adapter en corrigeant nos lacunes tout en évoquant des notions nouvelles issues de la recherche. \\
+
+Nous remercions également Anne Chousseauq qui, durant les travaux pratiques, nous a accompagnée avec calme et passion.\\
+
+Finalement, nous sommes reconnaissant envers Tchanguiz RAZBAN pour les cours dispensés et  les ressources pédagogiques mises à dispositions.
+
 \section{Introduction}
 \subsection{Contextualisation}
 \textbf{Parler de la limite entre BF et HF (longueur du circuit plus négligeable devant la longueur d'onde des signaux mis en jeu)\\
