--- a/rapport/configuration.tex
+++ b/rapport/configuration.tex
@@ -18,5 +18,9 @@
 
 \usepackage{tikz}
 \usepackage{circuitikz}
+\renewcommand{\contentsname}{Table des matières}
+\renewcommand{\listfigurename}{Table des figures}
+\renewcommand{\listtablename}{Liste des tableaux}
+
 
 \parindent=0cm 
