--- a/rapport/configuration.tex
+++ b/rapport/configuration.tex
@@ -20,3 +20,29 @@
 \usepackage{circuitikz}
 
 \parindent=0cm 
+
+\usepackage{listings}             % Include the listings-package
+
+\lstset{language=Matlab}          % Set your language (you can change the language for each code-block optionally)
+
+
+%
+%\lstdefinestyle{CStyle}{
+%	backgroundcolor=\color{backgroundColour},
+%	commentstyle=\color{mGreen},
+%	keywordstyle=\color{magenta},
+%	numberstyle=\tiny\color{mGray},
+%	stringstyle=\color{mPurple},
+%	basicstyle=\footnotesize,
+%	breakatwhitespace=false,
+%	breaklines=true,
+%	captionpos=b,
+%	keepspaces=true,
+%	numbers=left,
+%	numbersep=5pt,
+%	showspaces=false,
+%	showstringspaces=false,
+%	showtabs=false,
+%	tabsize=2,
+%	language=C
+%}
